towns of the Brazil added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
     <title>Carnaval</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <div id="content">
@@ -31,8 +32,8 @@
         </form>
         <form action="">
           <img src="./assets/pin.svg" alt="" />
-          <select name="" id="">
-            <option value="">Selecione uma cidade</option>
+          <select name="select-towns" id="towns">
+            <option value="" disabled selected>Selecione uma cidade</option>
           </select>
         </form>
         <button>BUSCAR AGORA</button>
